--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "<p>In this lab, you will test out how the labs work during rest of the semester. \n",
     "<ul>\n",
-    "<li>Use [Google Collab]((https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/main/lab0.ipynb)) to run the python code, and to complete any missing lines of code.</li> \n",
+    "<li>Use [Google Collab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/main/lab0.ipynb) to run the python code, and to complete any missing lines of code.</li> \n",
     "<li>Once you complete the lab, please download the .py file (File --> Download .py).</li> \n",
     "<li>Then, please use the following file naming convention to rename the downloaded python file lab0_YourRCS.py (make sure to replace 'YourRCS' with your RCS ID, for example 'lab03_senevo.py').</li> \n",
     "<li>Submit the .py file in LMS.</li>\n",
