Added some information

--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -21,7 +21,7 @@
     "* Then, please use the following file naming convention to rename the downloaded python file lab0_YourRCS.py (make sure to replace 'YourRCS' with your RCS ID, for example 'lab03_senevo.py').\n",
     "* Submit the .py file in LMS.\n",
     "\n",
-    "<p>Due Date: Wednesday, <b>May 25, 6.00 pm ET</b></p>\n",
+    "<p>Due Date: Wednesday, <b>May 26, 6.00 pm ET</b></p>\n",
     "\n",
     "<p>Estimated Time Needed: <b>10 minutes</b></p>\n",
     "\n",
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's import the library, and initialize it."
+    "Next, let's import the library."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's have some fun with the turtle! The 'forward' command tells the turtle to walk forward 300 steps. Please remember to initialize the turtle before every drawing."
+    "Let's have some fun with the turtle! First we need to initialize the ColabTurtle before every drawing. The 'forward' command tells the turtle to walk forward 300 steps."
    ]
   },
   {
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it for Lab00! After completing the lab, please download the python code (File -> Download .py), and submit that in LMS."
+    "That's it for lab 0! After completing the lab, please download the python code (File -> Download .py), rename it as 'lab0_YourRCS.py'and submit that in LMS. Any questions, please ask from the instructors, TA, and the course mentor."
    ]
   }
  ],
