fixed incorrect variable labels

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -1405,7 +1405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let us create a tensor <code>X</code> with size 2X3. Then, let us create another tensor <code>Y</code> with size 3X2. Since the number of columns of <code>X</code> is equal to the number of rows of <code>Y</code>. We are able to perform the multiplication."
+    "First, let us create a tensor <code>A</code> with size 2X3. Then, let us create another tensor <code>B</code> with size 3X2. Since the number of columns of <code>A</code> is equal to the number of rows of <code>B</code>. We are able to perform the multiplication."
    ]
   },
   {
