--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "Import the following libraries that you'll use for this lab:\n",
     "\n",
-    "(By the way, `%matplotlib inline` Ensures that all matplotlib plots will be plotted in the output cell within the notebook and will be kept in the notebook when saved. This type of code is called \"line magics\" and are functions that you can run on cells. They should be at the beginning of a line and take as an argument the rest of the line from where they are called.)"
+    "(By the way, `%matplotlib inline` ensures that all matplotlib plots will be plotted in the output cell within the notebook and will be kept in the notebook when saved. This type of code is called \"line magics\" and are functions that you can run on cells. They should be at the beginning of a line and take as an argument the rest of the line from where they are called.)"
    ]
   },
   {
