minor formatting issues and changed the due date/time

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -19,12 +19,12 @@
     "\n",
     "* Use [Google Collab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/master/lab1.ipynb) to run the python code, and to complete any missing lines of code.\n",
     "* You might find it helpful to save this notebook on your Google Drive.\n",
-    "* Please make sure to fill the required information in the *Declaration* cell.\n",
+    "* Please make sure to fill the required information in the **Declaration** cell.\n",
     "* Once you complete the lab, please download the .py file (File --> Download .py).\n",
     "* Then, please use the following file naming convention to rename the downloaded python file lab1_YourRCS.py (make sure to replace 'YourRCS' with your RCS ID, for example 'lab1_senevo.py').\n",
     "* Submit the .py file in LMS.\n",
     "\n",
-    "<p>Due Date/Time: Friday, Jun 18 <b>1.30 pm ET</b></p>\n",
+    "<p>Due Date/Time: Friday, Jun 18 <b>1.00 PM ET</b></p>\n",
     "\n",
     "<p>Estimated Time Needed: <b>4 hours</b></p>\n",
     "\n",
