Changed some of the wording in Part 1

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -49,11 +49,11 @@
   },
   {
    "source": [
-    "## Part 1 - Predicting handwritten digits using the Softmax Classifier\n",
+    "## Part 1 - Recognizing Handwritten Digits\n",
     "\n",
-    "In this section, you will use a single layer Softmax to classify handwritten digits from the MNIST database.\n",
+    "In this section, you will use a single layer neural network to classify handwritten digits from the MNIST database, that contains handwritten digit images. For more information about MNIST please see http://yann.lecun.com/exdb/mnist.\n",
     "\n",
-    "We'll need the following libraries"
+    "We'll need the following libraries. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -75,7 +75,7 @@
   },
   {
    "source": [
-    "Use the following function to plot out the parameters of the Softmax function:"
+    "Use the following function to plot the parameters of the neural network:"
    ],
    "cell_type": "markdown",
    "metadata": {}
