fixed colab typo

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -17,7 +17,7 @@
     "<p>In this lab, you will learn the basics of PyTorch. You will learn about tensors, compare them to vectors, and NumPy arrays, learn the basics of tensor operations on 1D and 2D tensors, learn how to do differentiation in PyTorch, and learn about the Dataset class.</p>\n",
     "<p>You will also learn about the building blocks of deep learning, and explore some basic ideas in Linear Regression and Gradient Descent.</p>\n",
     "\n",
-    "* Use [Google Collab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/master/lab1.ipynb) to run the python code, and to complete any missing lines of code.\n",
+    "* Use [Google Colab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/master/lab1.ipynb) to run the python code, and to complete any missing lines of code.\n",
     "* You might find it helpful to save this notebook on your Google Drive.\n",
     "* Please make sure to fill the required information in the **Declaration** cell.\n",
     "* Once you complete the lab, please download the .ipynb file (File --> Download .ipynb).\n",
