--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "<p>In this lab, you will learn the basics of Computer Vision, how to apply Convolutional Neural Networks, and how to tweak them.</p>\n",
     "\n",
-    "* Use [Google Collab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/master/lab2.ipynb) to run the python code, and to complete any missing lines of code.\n",
+    "* Use [Google Colab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/master/lab2.ipynb) to run the python code, and to complete any missing lines of code.\n",
     "* You might find it helpful to save this notebook on your Google Drive.\n",
     "* Please make sure to fill the required information in the **Declaration** cell.\n",
     "* Once you complete the lab, please download the .ipynb file (File --> Download .ipynb).\n",
