--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "In this lab, you will test out how the labs work during rest of the semester. \n",
     "\n",
-    "* Use [Google Collab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/main/lab0.ipynb) to run the python code, and to complete any missing lines of code.\n",
+    "* Use [Google Colab](https://colab.research.google.com/github/AIFictionFact/Summer2021/blob/main/lab0.ipynb) to run the python code, and to complete any missing lines of code.\n",
     "* Once you complete the lab, please download the .py file (File --> Download .py).\n",
     "* Then, please use the following file naming convention to rename the downloaded python file lab0_YourRCS.py (make sure to replace 'YourRCS' with your RCS ID, for example 'lab03_senevo.py').\n",
     "* Submit the .py file in LMS.\n",
