Replaced the relative image URLs with the absolute values

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -186,7 +186,7 @@
    "source": [
     "Each element in the rectangular tensor corresponds to a number that represents a pixel intensity as demonstrated by the following image:\n",
     "\n",
-    "<img src=\"images/MNIST_1_image_values.png\" width=\"550\" alt=\"MNIST elements\" />\n",
+    "<img src=\"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/MNIST_1_image_values.png\" width=\"550\" alt=\"MNIST elements\" />\n",
     "\n",
     "In this image, the values are inverted i.e black represents white.\n",
     "\n",
@@ -290,7 +290,7 @@
    "source": [
     "Flatten the tensor as shown in this image: \n",
     "\n",
-    "<img src = \"images/Imagetovector2.png\" width=\"550\" alt=\"Flattern Image\" />\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/Imagetovector2.png\" width=\"550\" alt=\"Flattern Image\" />\n",
     "\n",
     "The size of the tensor is now 784.\n",
     "\n",
@@ -357,7 +357,7 @@
    "source": [
     "You can cover the model parameters for each class to a rectangular grid: \n",
     "\n",
-    "<a><img src = \"images/paramaters_to_image.gif\" width = 550, align = \"center\"></a> \n",
+    "<a><img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/paramaters_to_image.gif\" width = 550, align = \"center\"></a> \n",
     "\n",
     "Plot the model parameters for each class as a square image: "
    ],
@@ -651,7 +651,7 @@
    "source": [
     "The following animation illustrates the process. The kernel performs at the element-level multiplication on every element in the image in the corresponding region. The values are then added together. The kernel is then shifted and the process is repeated. \n",
     "\n",
-    "<img src = \"images/convolution.gif\" width = 500, align = \"center\">\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/convolution.gif\" width = 500, align = \"center\">\n",
     "\n",
     "<h3>Determining  the Size of the Output</h3>\n",
     "\n",
@@ -700,7 +700,7 @@
    "source": [
     "The image and the kernel are as follows:\n",
     "\n",
-    "<img src = \"images/kernal2.png\" width = 500, align = \"center\">\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/kernal2.png\" width = 500, align = \"center\">\n",
     "\n",
     "The following equation provides the output:\n",
     "\n",
@@ -710,7 +710,7 @@
     "\n",
     "The following animation illustrates the process: The first iteration of the kernel overlay of the images produces one output. As the kernel is of size K, there are M-K  elements for the kernel to move in the horizontal direction. The same logic applies to the vertical direction.\n",
     "\n",
-    "<img src = \"images/outsize.gif\" width = 500, align = \"center\">\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/outsize.gif\" width = 500, align = \"center\">\n",
     "\n",
     "Perform the convolution and verify the size is correct:"
    ],
@@ -764,7 +764,7 @@
     "\n",
     "The following animation illustrates the process: The first iteration of the kernel overlay of the images produces one output. Because the kernel is of size K, there are M-K=2 elements. The stride is 2 because it will move 2 elements at a time. As a result, you divide M-K by the stride value 2:\n",
     "\n",
-    "<img src = \"images/stride2.gif\" width = 500, align = \"center\">\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/stride2.gif\" width = 500, align = \"center\">\n",
     "\n",
     "Perform the convolution and verify the size is correct: "
    ],
@@ -861,7 +861,7 @@
    "source": [
     "The process is summarized in the following  animation: \n",
     "\n",
-    "<img src = \"images/zeropad.gif\" width = 500, align = \"center\">"
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/zeropad.gif\" width = 500, align = \"center\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -894,7 +894,7 @@
     "\n",
     "Just like a neural network, you apply an activation function to the \"activation map\" obtain through the convolution explained above as shown in the following image:\n",
     "\n",
-    "<img src = \"images/block_digram.png\" width = 1000, align = \"center\">"
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/block_digram.png\" width = 1000, align = \"center\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -941,7 +941,7 @@
    "source": [
     "The following depicts the image and kernel we just created: \n",
     "\n",
-    "<img src = \"images/kernal_out.png\" width = 500, align = \"center\">"
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/kernal_out.png\" width = 500, align = \"center\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -984,7 +984,7 @@
    "source": [
     "The process is summarized in the the following figure. The Relu function is applied to each element. All the elements less than zero are mapped to zero. The remaining components do not change.\n",
     "\n",
-    "<img src = \"images/block_example.gif\" width = 1000, align = \"center\">"
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/block_example.gif\" width = 1000, align = \"center\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1017,11 +1017,11 @@
    "source": [
     "Max pooling simply takes the maximum value in each region. Consider the following image. For the first region, max pooling simply takes the largest element in a yellow region.   \n",
     "\n",
-    "<img src = \"images/maxpool_1.png\" width = 500, align = \"center\">\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/maxpool_1.png\" width = 500, align = \"center\">\n",
     "\n",
     "If the stride is set to None (its defaults setting), the process will simply take the maximum in a prescribed area and shift over accordingly as shown in the following figure:\n",
     "\n",
-    "<img src = \"images/max_pool_animation_2.gif\" width = 500, align = \"center\">\n",
+    "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/max_pool_animation_2.gif\" width = 500, align = \"center\">\n",
     "\n",
     "Here's the code in Pytorch:  "
    ],
@@ -1243,7 +1243,7 @@
    "source": [
     "Each element in the rectangular tensor corresponds to a number representing a pixel intensity as demonstrated by the following image that you have seen in Lab 02.\n",
     "\n",
-    "<img src=\"images/imagenet.png\" width=\"550\" alt=\"MNIST data image\">\n",
+    "<img src=\"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/imagenet.png\" width=\"550\" alt=\"MNIST data image\">\n",
     "\n",
     "Print out the fourth label. You will see y=1."
    ],
