added missing torch import

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -23,7 +23,7 @@
     "* Then, please use the following file naming convention to rename the downloaded python file lab2_YourRCS.ipynb (make sure to replace 'YourRCS' with your RCS ID, for example 'lab2_senevo.ipynb').\n",
     "* Submit the .ipynb file in LMS.\n",
     "\n",
-    "<p>Due Date/Time: Friday, Jul 2 <b>1.00 PM ET</b></p>\n",
+    "<p>Due Date/Time: <b>Friday, Jul 2 1.00 PM ET</b></p>\n",
     "\n",
     "<p>Estimated Time Needed: <b>4 hours</b></p>\n",
     "\n",
@@ -67,6 +67,7 @@
     "# Use the following line to install the torchvision library, if it is not already installed\n",
     "# !conda install -y torchvision\n",
     "\n",
+    "import torch\n",
     "import torch.nn as nn\n",
     "import torchvision.transforms as transforms\n",
     "import torchvision.datasets as dsets\n",
@@ -188,9 +189,9 @@
     "\n",
     "<img src=\"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/MNIST_1_image_values.png\" width=\"550\" alt=\"MNIST elements\" />\n",
     "\n",
-    "In this image, the values are inverted i.e black represents white.\n",
+    "In this image, the values are inverted, i.e., black represents white.\n",
     "\n",
-    "Print out the label of the fourth element:"
+    "Print out the label of the fourth sample:"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -226,26 +227,14 @@
   },
   {
    "source": [
-    "You see that it is a 1. Now, plot the third sample:"
+    "You see that it is a 1. "
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Plot the image\n",
-    "show_data(train_dataset[2])"
-   ]
-  },
-  {
-   "source": [
-    "<h3 id=\"#Classifier\">Build a Softmax Classifer</h3>\n",
-    "\n",
-    "<p>You do not really need to understand what a Softmax Classifier, does for the purpose of this lab. But if you are curious, please refer to this <a href=\"https://pytorch.org/tutorials/beginner/nlp/deep_learning_tutorial.html\">tutorial</a> to learn more.</p>"
+    "<h3 id=\"#Classifier\">Build a Softmax Classifer</h3>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -292,7 +281,7 @@
     "\n",
     "<img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/Imagetovector2.png\" width=\"550\" alt=\"Flattern Image\" />\n",
     "\n",
-    "The size of the tensor is now 784.\n",
+    "The size of the input tensor is 784, and the output tensor is 10 (because it is recognizing the digits from 0-9.)\n",
     "\n",
     "Set the input size and output size: "
    ],
@@ -319,7 +308,7 @@
   },
   {
    "source": [
-    "<h3 id=\"Model\">Define the Softmax Classifier, Criterion Function, Optimizer, and Train the Model</h3> "
+    "Define the Softmax Classifier."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -355,7 +344,7 @@
   },
   {
    "source": [
-    "You can cover the model parameters for each class to a rectangular grid: \n",
+    "You can convert the model parameters for each class (0-9) to a rectangular grid: \n",
     "\n",
     "<a><img src = \"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/paramaters_to_image.gif\" width = 550, align = \"center\"></a> \n",
     "\n",
@@ -376,7 +365,7 @@
   },
   {
    "source": [
-    "Define the learning rate, optimizer, criterion, data loader:"
+    "Define the learning rate, optimizer, criterion (i.e., the loss funtion), and the data loader:"
    ],
    "cell_type": "markdown",
    "metadata": {}
