Added clarity to some descriptions

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -549,7 +549,7 @@
    "source": [
     "## Part 2 - Convolutional Neural Networks\n",
     "\n",
-    "In this section of the lab, you will study convolution and review how the different operations change the relationship between input and output.\n",
+    "In this part of the lab, you will study convolution and review how the different operations change the relationship between input and output.\n",
     "\n",
     "### What is Convolution?\n",
     "\n",
@@ -558,13 +558,11 @@
     "You can see the relationship between the different methods that you learned:\n",
     "\n",
     "$$linear \\ equation :y=wx+b$$\n",
-    "$$linear\\ equation\\ with\\ multiple \\ variables \\ where \\ \\mathbf{x} \\ is \\ a \\ vector \\ \\mathbf{y}=\\mathbf{wx}+b$$\n",
-    "$$ \\ matrix\\ multiplication \\ where \\ \\mathbf{X} \\ in \\ a \\ matrix \\ \\mathbf{y}=\\mathbf{wX}+\\mathbf{b} $$\n",
-    "$$\\ convolution \\ where \\ \\mathbf{X} \\ and \\ \\mathbf{Y} \\ is \\ a \\ tensor \\  \\mathbf{Y}=\\mathbf{w}*\\mathbf{X}+\\mathbf{b}$$\n",
+    "$$linear\\ equation\\ with\\ multiple \\ variables \\ where \\ \\mathbf{x} \\ is \\ a \\ vector : \\mathbf{y}=\\mathbf{wx}+b$$\n",
+    "$$ \\ matrix\\ multiplication \\ where \\ \\mathbf{X} \\ is \\ a \\ matrix : \\mathbf{y}=\\mathbf{wX}+\\mathbf{b} $$\n",
+    "$$\\ convolution \\ where \\ \\mathbf{X} \\ and \\ \\mathbf{Y} \\ are \\ tensors :  \\mathbf{Y}=\\mathbf{w}*\\mathbf{X}+\\mathbf{b}$$\n",
     "\n",
-    "In convolution, the parameter <b>w</b> is called a kernel. You can perform convolution on images where you let the variable image denote the variable X and w denote the parameter.\n",
-    "\n",
-    "Create a two-dimensional convolution object by using the constructor Conv2d, the parameter <code>in_channels</code> and <code>out_channels</code> will be used for this section, and the parameter kernel_size will be three."
+    "Create a two-dimensional convolution object by using the constructor <code>nn.Conv2d</code>, with the parameters <code>in_channels</code>, <code>out_channels</code>, and the parameter <code>kernel_size</code> (which will be set to 3)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -581,7 +579,7 @@
   },
   {
    "source": [
-    "Because the weight and bias parameters in <code>nn.Conv2d</code> are randomly initialized and learned through training, give them some values."
+    "Because the weight and bias parameters in <code>nn.Conv2d</code> are randomly initialized and learned through training, give them some initial values."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -599,11 +597,11 @@
   },
   {
    "source": [
-    "Create a dummy tensor to represent an image. The shape of the image is (1,1,5,5) where the parameters correspond to the following:\n",
+    "Create a dummy tensor to represent an image. The parameters of this dummy tensor correspond to the following:\n",
     "\n",
-    "(number of inputs, number of channels, number of rows, number of columns ) \n",
+    "(number of inputs, number of channels, number of rows, number of columns) \n",
     "\n",
-    "Set the third column to 1:"
+    "Then, set the third column to 1:"
    ],
    "cell_type": "markdown",
    "metadata": {}
