separated the written answer questions to their own cells

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -539,8 +539,14 @@
     "\n",
     "What is your observation on the misclassified and correctly classified digits from the MNIST dataset? You may want to check the misclassified and correctly classified samples and their classification probabilities beyond the first five used in the lab. (max 100 words)\n",
     "\n",
-    "_Please type your answer here_\n",
     "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "_Please type your answer to Task 01 here._\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -790,7 +796,7 @@
   },
   {
    "source": [
-    "Try performing convolutions with the <code>kernel_size=2</code> and a <code>stride=3</code>. Use these values:\n",
+    "Try performing convolutions with the <code>kernel_size=2</code> and a <code>stride=3</code>.\n",
     "\n",
     "$$M_{out}=\\dfrac{M-K}{stride}+1$$\n",
     "$$M_{out}=\\dfrac{4-2}{3}+1$$\n",
@@ -1032,10 +1038,7 @@
     "Task 03-1: Create a maxpooling object in 2d to perform max pooling with stride = 1 on <code>image1</code>. (1 point)\n",
     "\n",
     "Task 03-2: Provide a written answer to the following question (max 200 words).\n",
-    "How does output size change when the stride = 1 compared to the default stride value? What is the reason for the change in the output size (you may explain your answer with the equations introduced earlier)?(2 points)\n",
-    "\n",
-    "_Please type your answer to Task 03-2 here._\n",
-    "\n"
+    "How does output size change when the stride = 1 compared to the default stride value? What is the reason for the change in the output size (you may explain your answer with the equations introduced earlier)?(2 points)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1048,6 +1051,13 @@
    "source": [
     "# Type your code here to apply maxpooling with stride = 1 (1 point)\n"
    ]
+  },
+  {
+   "source": [
+    "_Please type your answer to Task 03-2 here._\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -1644,21 +1654,13 @@
    "source": [
     "## Task 05 - Analyze misclassified images in the MNIST validation dataset (10 points)\n",
     "\n",
-    "Task 05-1: Earlier in the lab you saw how to plot the correctly classified and misclassified images. Complete the function <code>lab2_task5</code> that will print 5 misclassified digit images. (3 points)\n",
+    "Task 05-1: Earlier in the lab you saw how to plot the correctly classified and misclassified images. Complete the function <code>lab2_task5_1</code> that will print 5 misclassified digit images. (3 points)\n",
     "\n",
-    "Task 05-2: This is a written answer. \n",
+    "Task 05-2: __(This is a written answer question.)__ Please compare the level of misclassification of digits you saw earlier in this lab for Task 01 vs. the ones you see for this task. (2 points)\n",
     "\n",
-    "Task 05-2-1: Please compare the level of misclassification of digits you saw earlier in this lab for Task 01 vs. the ones you see for this task. (2 points)\n",
+    "Task 05-3: __(This is a written answer question.)__ What are your thoughts on the test accuracy of CNNs? (2 points)\n",
     "\n",
-    "_(Please type your answer here.)_\n",
-    "\n",
-    "Task 05-2-2: What are your thoughts on the test accuracy of CNNs? (2 points)\n",
-    "\n",
-    "_(Please type your answer here.)_\n",
-    "\n",
-    "Task 05-2-3: What are some strategies for increasing the accuracy? (3 points)\n",
-    "\n",
-    "_(Please type your answer here.)_\n"
+    "Task 05-4: __(This is a written answer question.)__ What are some strategies for increasing the accuracy? (3 points)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1670,8 +1672,29 @@
    "outputs": [],
    "source": [
     "# Type your code here to complete this function that will print 5 misclassified digit images\n",
-    "def lab2_task5():\n"
+    "def lab2_task5_1():\n"
    ]
+  },
+  {
+   "source": [
+    "_(Please type your answer to Task 05-2 here.)_\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "_(Please type your answer to Task 05-4 here.)_\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "_(Please type your answer to Task 05-3 here.)_\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -2229,9 +2252,7 @@
     "\n",
     "Task 07-2: Write code to try the new and improved <code>le_net</code> network on the FashionMNIST dataset. (2 points)\n",
     "\n",
-    "Task 07-3: Summarize the results of your trials in constructing the new and improved <code>le_net</code>. This is a written answer question. (3 points)\n",
-    "\n",
-    "_(Please type your answer to task 07-3 here)_\n"
+    "Task 07-3: __(This is a written answer question.)__ Summarize the results of your trials in constructing the new and improved <code>le_net</code>. (3 points)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2242,10 +2263,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Task 07-1: Type your code here to improve le_net\n",
-    "\n",
+    "# Task 07-1: Type your code here to improve le_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Task 07-2: Type your code here to apply the improved le_net on FashionMNIST"
    ]
+  },
+  {
+   "source": [
+    "_(Please type your answer to Task 07-3 here)_"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
