--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -71,7 +71,11 @@
     "import torch.nn as nn\n",
     "import torchvision.transforms as transforms\n",
     "import torchvision.datasets as dsets\n",
-    "import matplotlib.pylab as plt\n"
+    "import matplotlib.pylab as plt\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.distributions import normal\n",
+    "import time\n",
+    "\n"
    ]
   },
   {
