added the device information

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -2151,6 +2151,34 @@
   },
   {
    "source": [
+    "Here is a simple function that we can use to detect whether we have a GPU. In it, we try to allocate gpu0 if available using torch.cuda.is_available() method. Otherwise, we stick with the CPU. For more information about PyTorch's device API, please see https://pytorch.org/docs/stable/tensor_attributes.html#torch.torch.device.\n",
+    "\n",
+    "In your colab notebook settings, please remember to set the \"Runtime\" -> \"Change Runtime Type\" -> and in the \"Hardware accelerator\" drop-down list, select \"GPU.\"\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/AIFictionFact/Summer2021/main/images/gpu_settings.png\" width=\"200\"/>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def try_gpu():\n",
+    "    \"\"\"If GPU is available, return torch.device as cuda:0; else return torch.device as cpu.\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        device = torch.device('cuda:0')\n",
+    "    else:\n",
+    "        device = torch.device('cpu')\n",
+    "    return device\n",
+    "\n",
+    "device = try_gpu()"
+   ]
+  },
+  {
+   "source": [
     "Here is the training function. Note that we need to move each batch of data to our designated device (hopefully, the GPU) prior to making the forward and backward passes. \n"
    ],
    "cell_type": "markdown",
