--- a/lab1-answers.ipynb
+++ b/lab1-answers.ipynb
@@ -2963,7 +2963,7 @@
     "x = torch.tensor([[1.0], [2.0], [3.0]])\n",
     "def lab1_task17(x):\n",
     "    # Type your code here to return the prediction\n",
-    "    lr1=LinearRegression(1,1)\n",
+    "    lr=LinearRegression(1,1)\n",
     "    yhat=lr(x)\n",
     "    return yhat #1 point\n",
     "    \n",
@@ -3281,6 +3281,7 @@
     "w = torch.tensor(-15.0, requires_grad = True) # Type your code here # 1 point\n",
     "LOSS2 = [] # Type your code here\n",
     "gradient_plot1 = PlotDiagram(X, Y, w, stop = 15)\n",
+    "learning_rate = 0.1\n",
     "\n",
     "def lab1_task18_train_model(iter): # 1 point\n",
     "    # Type your code here\n",
@@ -3290,7 +3291,7 @@
     "        gradient_plot1(Yhat, w, loss.item(), epoch)\n",
     "        LOSS2.append(loss)\n",
     "        loss.backward()\n",
-    "        w.data = w.data - lr * w.grad.data\n",
+    "        w.data = w.data - learning_rate * w.grad.data\n",
     "        w.grad.data.zero_()\n",
     "\n",
     "lab1_task18_train_model(4)\n",
@@ -4192,6 +4193,7 @@
     "def lab1_task20_train_model(epochs):\n",
     "    # Type your code here\n",
     "    for epoch in range(epochs):\n",
+    "        Yhat = forward(X)\n",
     "        LOSS.append(criterion(Yhat, X))  #1 point\n",
     "        for x, y in trainloader:\n",
     "            yhat = forward(x)  #1 point \n",
@@ -4551,22 +4553,22 @@
     "learning_rate = 0.1\n",
     "\n",
     "# Type your code here to define the trainloader\n",
-    "trainloader = DataLoader(dataset = dataset, batch_size = 20) #1 point\n",
+    "trainloader = DataLoader(dataset = my_dataset, batch_size = 20) #1 point\n",
     "\n",
     "def lab1_task21_train_model(epochs):\n",
     "    # Type your code here\n",
     "    for epoch in range(epochs):\n",
     "        Yhat = forward(X)\n",
-    "        get_surface.set_para_loss(w.data.tolist(), b.data.tolist(), criterion(Yhat, Y).tolist())\n",
-    "        get_surface.plot_ps()\n",
+    "        error_surfaces.set_para_loss(w.data.tolist(), b.data.tolist(), criterion(Yhat, Y).tolist())\n",
+    "        error_surfaces.plot_ps()\n",
     "        LOSS_MINI20.append(criterion(forward(X), Y).tolist()) #1 point\n",
     "        for x, y in trainloader:\n",
     "            yhat = forward(x)\n",
     "            loss = criterion(yhat, y)\n",
-    "            get_surface.set_para_loss(w.data.tolist(), b.data.tolist(), loss.tolist())\n",
+    "            error_surfaces.set_para_loss(w.data.tolist(), b.data.tolist(), loss.tolist())\n",
     "            loss.backward()\n",
-    "            w.data = w.data - lr * w.grad.data\n",
-    "            b.data = b.data - lr * b.grad.data\n",
+    "            w.data = w.data - learning_rate * w.grad.data\n",
+    "            b.data = b.data - learning_rate * b.grad.data\n",
     "            w.grad.data.zero_()\n",
     "            b.grad.data.zero_()\n",
     "\n",
