added a warning for the time duration taken to run the Q-learning algorithm

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -1253,7 +1253,7 @@
       "source": [
         "We can now make the environment. \n",
         "\n",
-        "Warning: this code may take some time to run."
+        "Warning: this code may take some time to run (around 15-20 mins)."
       ],
       "metadata": {
         "id": "xWKhFTLzvfMm"
