installing the appropriate version of the cloudpickle library

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -549,7 +549,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's install the required libraries. First is the OpenAI Gym."
+        "Let's install the required libraries. First is the `cloudpickle` library (we need 1.6 as that is the latest version of the library that plays nicely with the `stable_baslines3` library that will be introduced later--_if you are curious please see [this issue](https://github.com/hill-a/stable-baselines/issues/1024) for some context_.).\n",
+        "\n",
+        "The second library is `gym` from OpenAI."
       ],
       "metadata": {
         "id": "SDVfHkxLA6G1"
@@ -559,6 +561,7 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
+        "!pip install cloudpickle==1.6\n",
         "!pip install gym"
       ],
       "outputs": [],
