need to install Box2D

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -551,7 +551,9 @@
       "source": [
         "Let's install the required libraries. First is the `cloudpickle` library (we need 1.6 as that is the latest version of the library that plays nicely with the `stable_baslines3` library that will be introduced later--_if you are curious please see [this issue](https://github.com/hill-a/stable-baselines/issues/1024) for some context_.).\n",
         "\n",
-        "The second library is `gym` from OpenAI."
+        "The second set of libraries are for installing `box2d` a game engine that some of the gym environments rely on.\n",
+        "\n",
+        "The third library is `gym` from OpenAI."
       ],
       "metadata": {
         "id": "SDVfHkxLA6G1"
@@ -562,7 +564,11 @@
       "execution_count": null,
       "source": [
         "!pip install cloudpickle==1.6\n",
-        "!pip install gym"
+        "\n",
+        "!pip install Box2D\n",
+        "!pip install box2d-py\n",
+        "\n",
+        "!pip install gym[all]"
       ],
       "outputs": [],
       "metadata": {
