Added the heading TicTacToeSolver

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -112,7 +112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Simple Program to Solve Tic-Tac-Toe Board Configurations\n",
+        "## TicTacToeSolver: Simple Program to Solve Tic-Tac-Toe Board Configurations\n",
         "\n",
         "In the class we discussed algorithms such as [MiniMax](https://en.wikipedia.org/wiki/Minimax) for game play.\n",
         "\n",
