--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -43,7 +43,7 @@
         "* Then, please use the following file naming convention to rename the downloaded python file lab4_YourRCS.ipynb (make sure to replace 'YourRCS' with your RCS ID, for example 'lab4_senevo.ipynb').\n",
         "* Submit the .ipynb file in LMS.\n",
         "\n",
-        "<p>Due Date/Time: <b>Tuesday, Aug 10 1.00 PM ET</b></p>\n",
+        "<p>Due Date/Time: <b><strike>Tuesday, Aug 10 1.00 PM ET</strike> Friday, Aug 13 1.00 PM ET (extended)</b></p>\n",
         "\n",
         "<p>Estimated Time Needed: <b>4 hours</b></p>\n",
         "\n",
